explore the word vector and gensim

--- a/Assignments/Assignment 1/exploring_word_vectors.ipynb
+++ b/Assignments/Assignment 1/exploring_word_vectors.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package reuters to /home/hanh/nltk_data...\n"
+     ]
+    }
+   ],
    "source": [
     "# All Import Statements Defined Here\n",
     "# Note: Do not add to this list.\n",
@@ -932,9 +940,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "cs224n",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cs224n"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -946,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
