--- a/Assignments/Assignment 1/exploring_word_vectors.ipynb
+++ b/Assignments/Assignment 1/exploring_word_vectors.ipynb
@@ -14,9 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# !pip install gensim\n",
+    "# !pip install matplotlib\n",
+    "# !pip install "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package reuters to /home/hanh/nltk_data...\n"
+     ]
+    }
+   ],
    "source": [
     "# All Import Statements Defined Here\n",
     "# Note: Do not add to this list.\n",
@@ -124,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +206,9 @@
     "    num_corpus_words = -1\n",
     "    \n",
     "    # ------------------\n",
-    "    # Write your implementation here.\n",
-    "\n",
-    "\n",
+    "    # Write your implementation here.   \n",
+    "    corpus_words = sorted(list(set([word for sentence in corpus for word in sentence])))\n",
+    "    num_corpus_words = len(corpus_words)\n",
     "    # ------------------\n",
     "\n",
     "    return corpus_words, num_corpus_words"
@@ -197,9 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "Passed All Tests!\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------\n",
     "# Run this sanity check\n",
@@ -932,9 +961,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "cs224n",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cs224n"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -946,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
