--- a/Assignments/Assignment 1/exploring_word_vectors.ipynb
+++ b/Assignments/Assignment 1/exploring_word_vectors.ipynb
@@ -334,7 +334,7 @@
     "    # ------------------\n",
     "    # Write your implementation here.\n",
     "\n",
-    "    corpus_words = {work for sen in corpus for work in sen}\n",
+    "    corpus_words = {work for sentence in corpus for work in sentence}\n",
     "    corpus_words = sorted(list(corpus_words))\n",
     "    num_corpus_words = len(corpus_words)\n",
     "    # ------------------\n",
@@ -426,10 +426,10 @@
     "    \n",
     "    M = np.zeros((num_words, num_words))\n",
     "\n",
-    "    for sen in corpus:\n",
-    "        for i in range(len(sen) - 1):\n",
-    "            M[word2Ind[sen[i]], word2Ind[sen[i + 1]]] += 1\n",
-    "            M[word2Ind[sen[i + 1]], word2Ind[sen[i]]] += 1\n",
+    "    for sentence in corpus:\n",
+    "        for i in range(len(sentence) - 1):\n",
+    "            M[word2Ind[sentence[i]], word2Ind[sentence[i + 1]]] += 1\n",
+    "            M[word2Ind[sentence[i + 1]], word2Ind[sentence[i]]] += 1\n",
     "    # ------------------\n",
     "\n",
     "    return M, word2Ind"
