--- a/Assignments/Assignment 1/exploring_word_vectors.ipynb
+++ b/Assignments/Assignment 1/exploring_word_vectors.ipynb
@@ -614,17 +614,11 @@
     "\n",
     "    # ------------------\n",
     "    # Write your implementation here.\n",
-    "    x = []\n",
-    "    y = []\n",
-    "    w = []\n",
-    "    for word in words:\n",
-    "        w.append(word)\n",
-    "        x.append(M_reduced[word2Ind[word]][0])\n",
-    "        y.append(M_reduced[word2Ind[word]][1])\n",
-    "\n",
-    "    plt.scatter(x, y)\n",
-    "    for i, txt in enumerate(w):\n",
-    "        plt.annotate(txt, (x[i], y[i]))\n",
+    "    for w in words:\n",
+    "        idx = word2Ind[w]\n",
+    "        plt.scatter(M_reduced[idx][0], M_reduced[idx][1], marker='x', color='red')\n",
+    "        plt.text(M_reduced[idx][0], M_reduced[idx][1], w, fontsize=10)\n",
+    "    plt.show()\n",
     "    # ------------------"
    ]
   },
@@ -743,13 +737,14 @@
    "source": [
     "#### <font color=\"red\">Write your answer here.</font>\n",
     "\n",
-    "1. There are 2 clusters what I can see:\n",
-    "    - bpd, barrels, venezuela, kuwait\n",
-    "    - output, oil, industry, energy\n",
+    "1. The clusters together in 2-dimensional embedding space:\n",
+    "    - petroleum, industry\n",
+    "    - energy, oil\n",
+    "    - ecuador, venezuela, kuwait.\n",
+    "\n",
     "    \n",
-    "2. I think these clusters bellow should be together:\n",
-    "    - \"bpd\", \"barrels\", \"petroleum\" and \"oil\"\n",
-    "    - \"kuwait\", \"venezuela\" and \"ecuador\""
+    "2. What doesn't cluster together that I might think should have:\n",
+    "    - bpd, barrels, output.\n"
    ]
   },
   {
@@ -945,9 +940,11 @@
    "source": [
     "#### <font color=\"red\">Write your answer here.</font>\n",
     "\n",
-    "1. There are 2 clusters what I can see:\n",
-    "    - oil, petroleum, ecuador, venezuela\n",
-    "    - industry, energy"
+    "1. The clusters together in 2-dimensional embedding space:\n",
+    "    - energy, industry\n",
+    "    - oil, petroleum, venezuala, ecuador\n",
+    "\n",
+    "2. The plot is quite different from the one generated earlier from the co-occurrence matrix since it is much sparse/ seperated from each other."
    ]
   },
   {
@@ -1005,7 +1002,7 @@
     "# ------------------\n",
     "# Write your implementation here.\n",
     "\n",
-    "wv_from_bin.most_similar(\"leaves\")\n",
+    "wv_from_bin.most_similar('square')\n",
     "# ------------------"
    ]
   },
@@ -1013,7 +1010,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "- __square__ has more than a meaning:\n",
+    "    - downtown, plaza\n",
+    "    - mile, feet\n",
+    "\n",
+    "- Many of the polysemous or homonymic words I tried didn't work because it does not have the same meaning (constrast words, distinct form ...)\n"
    ]
   },
   {
@@ -1057,7 +1060,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "The distance depends on the context distribution i.e: if antonyms are usually used in the same context with the words, their distance will be lower than the synonyms..."
    ]
   },
   {
@@ -1136,7 +1141,7 @@
    "source": [
     "    # ------------------\n",
     "    # Write your implementation here.\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=['winter', 'hot'], negative=['summer']))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['summer', 'hot'], negative=['winter']))\n",
     "\n",
     "    # ------------------"
    ]
@@ -1145,7 +1150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "summer : hot :: winter : cold"
    ]
   },
   {
@@ -1160,20 +1167,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries jupyter and notebook are not installed in interpreter Python 3.8.2 64-bit.",
+     "traceback": [
+      "Error: Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries jupyter and notebook are not installed in interpreter Python 3.8.2 64-bit.",
+      "at b.startServer (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:92:270430)",
+      "at async b.createServer (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:92:269873)",
+      "at async connect (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:92:397876)",
+      "at async w.ensureConnectionAndNotebookImpl (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:16:556625)",
+      "at async w.ensureConnectionAndNotebook (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:16:556303)",
+      "at async w.clearResult (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:16:552346)",
+      "at async w.reexecuteCell (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:16:540374)",
+      "at async w.reexecuteCells (/home/t/.vscode/extensions/ms-python.python-2020.5.80290/out/client/extension.js:16:537541)"
+     ]
+    }
+   ],
    "source": [
-    "    # ------------------\n",
-    "    # Write your implementation here.\n",
+    "# ------------------\n",
+    "# Write your implementation here.\n",
+    "wv_from_bin.most_similar(positive=['grandpa', 'daughter'], negative=['old'])\n",
     "\n",
-    "\n",
-    "    # ------------------"
+    "# ------------------"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "grandpa:old :: faughter:young\n"
    ]
   },
   {
@@ -1233,7 +1259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "- Gender bias:\n",
+    "    - woman:worker :: man:employee\n",
+    "    - man:worker :: woman:worker\n",
+    "\n"
    ]
   },
   {
@@ -1278,18 +1309,20 @@
     }
    ],
    "source": [
-    "    # ------------------\n",
-    "    # Write your implementation here.\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=['white', 'waving'], negative=['black']))\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=['black', 'waving'], negative=['white']))\n",
-    "    # ------------------"
+    "# ------------------\n",
+    "# Write your implementation here.\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['white', 'cheer'], negative=['black']))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['black', 'cheer'], negative=['white']))\n",
+    "# ------------------"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "Implicit bias since black:cheer contains negative meaning in top words but white:cheer does not. "
    ]
   },
   {
@@ -1305,7 +1338,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font color=\"red\">Write your answer here.</font>\n",
+    "\n",
+    "- Causes:\n",
+    "    - Gender discrimination\n",
+    "    - Race discrimination...\n"
    ]
   },
   {
