--- a/Assignments/Assignment 1/exploring_word_vectors.ipynb
+++ b/Assignments/Assignment 1/exploring_word_vectors.ipynb
@@ -1058,8 +1058,8 @@
    "source": [
     "# ------------------\n",
     "# Write your implementation here.\n",
-    "print(wv_from_bin.distance('men', 'women'))\n",
-    "print(wv_from_bin.distance('men', 'king'))\n",
+    "pprint.pprint(wv_from_bin.distance('men', 'women'))\n",
+    "pprint.pprint(wv_from_bin.distance('men', 'king'))\n",
     "# ------------------"
    ]
   },
