--- a/Assignments/Assignment 2/written.ipynb
+++ b/Assignments/Assignment 2/written.ipynb
@@ -6,18 +6,24 @@
    "source": [
     "(a) As described in the doc, $\\boldsymbol{y}$ is a one-hot vector with a 1 for the true outside word $o$, that means $y_i$ is 1 if and only if $i == o$. so the proof could be below:\n",
     "\n",
-    "$\\begin{aligned} - \\sum_{w\\in Vocab}y_w\\log(\\hat{y}_w) &= - [y_1\\log(\\hat{y}_1) + \\cdots + y_o\\log(\\hat{y}_o) + \\cdots + y_w\\log(\\hat{y}_w)] \\ & = - y_o\\log(\\hat{y}_o) \\ & = -\\log(\\hat{y}_o) \\ & = -\\log \\mathrm{P}(O = o | C = c) \\end{aligned}$"
+    "$\\begin{aligned} - \\sum_{w\\in Vocab}y_w\\log(\\hat{y}_w) &= - [y_1\\log(\\hat{y}_1) + \\cdots + y_o\\log(\\hat{y}_o) + \\cdots + y_w\\log(\\hat{y}_w)] \\& = - y_o\\log(\\hat{y}_o) \\& = -\\log(\\hat{y}_o) \\ & = -\\log \\mathrm{P}(O = o | C = c) \\end{aligned}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) we know this deravatives: $$ \\because J = CE(y, \\hat{y}) \\ \\hat{y} = softmax(\\theta)\\ \\therefore \\frac{\\partial J}{\\partial \\theta} = (\\hat{y} - y)^T $$\n",
-    "\n",
-    "$y$ is a column vector in the above equation. So, we can use chain rules to solve the deravitive:\n",
-    "\n",
-    "$$\\begin{aligned} \\frac{\\partial J}{\\partial v_c} &= \\frac{\\partial J}{\\partial \\theta} \\frac{\\partial \\theta}{\\partial v_c} \\ &= (\\hat{y} - y) \\frac{\\partial U^Tv_c}{\\partial v_c} \\ &= U^T(\\hat{y} - y)^T \\end{aligned}$$"
+    "(b) $\\frac{\\partial J}{\\partial v_c} = \\frac{\\partial J}{\\partial \\theta} \\frac{\\partial \\theta}{\\partial v_c} = (\\hat{y} - y) \\frac{\\partial U^Tv_c}{\\partial v_c} = U^T(\\hat{y} - y)^T$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) $\\frac{\\partial J}{\\partial u_{w}}=\\begin{cases}\n",
+    " & (\\hat{y}_{w}-1)v_{c}\\text{ if } w=0 \\\\ \n",
+    " & \\hat{y}_{w}v_{c}\\text{ if } w\\neq 0 \n",
+    "\\end{cases}$"
    ]
   },
   {
