--- a/Assignments/Assignment 2/written.ipynb
+++ b/Assignments/Assignment 2/written.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "(a) As described in the doc, $\\boldsymbol{y}$ is a one-hot vector with a 1 for the true outside word $o$, that means $y_i$ is 1 if and only if $i == o$. so the proof could be below:\n",
     "\n",
-    "$\\begin{aligned} - \\sum_{w\\in Vocab}y_w\\log(\\hat{y}_w) &= - [y_1\\log(\\hat{y}_1) + \\cdots + y_o\\log(\\hat{y}_o) + \\cdots + y_w\\log(\\hat{y}_w)] \\& = - y_o\\log(\\hat{y}_o) \\& = -\\log(\\hat{y}_o) \\ & = -\\log \\mathrm{P}(O = o | C = c) \\end{aligned}$"
+    "$-\\sum_{w\\in Vocab}y_w\\log(\\hat{y}_w) \\\\= -[y_1\\log(\\hat{y}_1) + \\cdots + y_o\\log(\\hat{y}_o) + \\cdots + y_w\\log(\\hat{y}_w)] \\\\= -y_o\\log(\\hat{y}_o) \\\\= -\\log(\\hat{y}_o) \\\\= -\\log \\mathrm{P}(O = o | C = c)$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) $\\frac{\\partial J}{\\partial v_c} = \\frac{\\partial J}{\\partial \\theta} \\frac{\\partial \\theta}{\\partial v_c} = (\\hat{y} - y) \\frac{\\partial U^Tv_c}{\\partial v_c} = U^T(\\hat{y} - y)^T$"
+    "(b) $\\frac{\\partial J}{\\partial v_c} = \\frac{\\partial J}{\\partial \\theta} \\frac{\\partial \\theta}{\\partial v_c} = (\\hat{y} - y)^T \\frac{\\partial U^Tv_c}{\\partial v_c} = U(\\hat{y} - y)$"
    ]
   },
   {
