--- a/Assignments/Assignment 2/written.ipynb
+++ b/Assignments/Assignment 2/written.ipynb
@@ -20,10 +20,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) $\\frac{\\partial J}{\\partial u_{w}}=\\begin{cases}\n",
+    "(c) \n",
+    "$\\frac{\\partial J}{\\partial u_{w}}=\\begin{cases}\n",
     " & (\\hat{y}_{w}-1)v_{c}\\text{ if } w=0 \\\\ \n",
     " & \\hat{y}_{w}v_{c}\\text{ if } w\\neq 0 \n",
     "\\end{cases}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(d)\n",
+    "$\\frac{d\\sigma}{d\\textbf{x}} \n",
+    "= \\frac{d}{d\\textbf{x}} [\\frac{1}{1 + e^{-\\textbf{x}}}] \\\\\n",
+    "= \\frac{d}{d\\textbf{x}} [(1 + e^{-\\textbf{x}})^{-1}] \\\\\n",
+    "= [-(1 + e^{-\\textbf{x}})^{-2}] [-e^{-\\textbf{x}}] \\\\\n",
+    "= \\frac{e^{-\\textbf{x}}}{(1 + e^{-\\textbf{x}})^{2}} \\\\\n",
+    "= (\\frac{1}{1 + e^{-\\textbf{x}}}) (\\frac{e^{-\\textbf{x}}}{1 + e^{-\\textbf{x}}})\\\\\n",
+    "= (\\frac{1}{1 + e^{-\\textbf{x}}}) (\\frac{e^{-\\textbf{x}} + 1 - 1}{1 + e^{-\\textbf{x}}}) \\\\\n",
+    "= (\\frac{1}{1 + e^{-\\textbf{x}}}) (\\frac{e^{-\\textbf{x}} + 1}{1 + e^{-\\textbf{x}}} - \\frac{1}{1 + e^{-\\textbf{x}}}) \\\\\n",
+    "= \\sigma(\\textbf{x})(1 - \\sigma(\\textbf{x}))$\n",
+    "\n"
    ]
   },
   {
